logs/watchdog_20251011_2300.log
[11/10/2025 23:00:01,67] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[11/10/2025 23:00:01,88] END WATCHDOG 
